# Rubik-s-Cube-Solver

./: CMakeLists.txt  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitBoard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerPatternDatabase.cpp  CornerPatternDatabase.h  Math.cpp  Math.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
